# rotations

./: CMakeLists.txt
rotations/: EulerAngle.cpp  EulerAngle.hpp  Matrix.cpp  Matrix.hpp  PRV.cpp  PRV.hpp  RotationParameters.cpp  RotationParameters.hpp  main.cpp
rotations.xcodeproj/: project.pbxproj
rotations.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rotations.xcodeproj/xcuserdata/apost.xcuserdatad/xcschemes/: xcschememanagement.plist
rotations/includes/: CRP.cpp  CRP.hpp  EulerAngle.cpp  EulerAngle.hpp  MRP.cpp  MRP.hpp  Matrix.cpp  Matrix.hpp  PRV.cpp  PRV.hpp  Quaternion.cpp  Quaternion.hpp  RotationIntegrator.hpp  RotationParameters.cpp  RotationParameters.hpp  Vector.cpp  Vector.hpp
rotations/includes/AttitudeDetermination/: AttitudeDetermination.cpp  AttitudeDetermination.hpp  DavenportQ.cpp  DavenportQ.hpp  TriadMethod.cpp  TriadMethod.hpp
rotations/includes/math/: Matrix.cpp  Matrix.hpp
rotations/src/: main.cpp
rotations/test/: AttitudeDeterminationTest.cpp  EulerAngleTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  RotationParametersTest.cpp  VectorTest.cpp  test.cpp
